--- a/pages/EditView.xaml
+++ b/pages/EditView.xaml
@@ -71,8 +71,8 @@
 
         </ListBox>
 
-
-        <Popup x:Name="pop" VerticalAlignment="top" Height="60" VerticalOffset="-60" PopupAnimation="slide"  AllowsTransparency="True" IsOpen="False" Grid.Column="0" Width="{Binding Path=ColumnDefinitions[0].ActualWidth,
+<!--
+        <Popup x:Name="pop" VerticalAlignment="top" Height="60" VerticalOffset="-60" PopupAnimation="Fade"  AllowsTransparency="True" IsOpen="False" Grid.Column="0" Width="{Binding Path=ColumnDefinitions[0].ActualWidth,
                         RelativeSource={RelativeSource Mode=FindAncestor,
                                                       AncestorType=Grid}}" >
 
@@ -82,9 +82,11 @@
             <Frame x:Name="SnackBar" VerticalAlignment="Bottom" HorizontalAlignment="Stretch" Height="60">
                 
             </Frame>
-        </Popup>
-        <!-- <Frame x:Name="SnackBar" x:Name="SnackBar" VerticalAlignment="Bottom" HorizontalAlignment="Stretch" Height="60"></Frame> -->
-        <!--<materialDesign:Snackbar Grid.Column="0" x:Name="SnackBarDialog" MessageQueue="{materialDesign:MessageQueue}" Height="61" Margin="0,0,0,-7" HorizontalAlignment="Stretch"  VerticalContentAlignment="Bottom" HorizontalContentAlignment="Stretch" Background="#FFD32F2F" Foreground="White" />
+        </Popup> -->
+
+            <Frame x:Name="SnackBar"  VerticalAlignment="Bottom" HorizontalAlignment="Stretch" Height="60"></Frame>
+        
+            <!--<materialDesign:Snackbar Grid.Column="0" x:Name="SnackBarDialog" MessageQueue="{materialDesign:MessageQueue}" Height="61" Margin="0,0,0,-7" HorizontalAlignment="Stretch"  VerticalContentAlignment="Bottom" HorizontalContentAlignment="Stretch" Background="#FFD32F2F" Foreground="White" />
 -->
         
         <ListBox Grid.Column="1" x:Name="searchRes" Margin="10,139,10,0" AllowDrop="True" SelectedIndex="1" HorizontalContentAlignment="Stretch">
