--- a/pages/PlayerControl.xaml
+++ b/pages/PlayerControl.xaml
@@ -151,7 +151,7 @@
             <Label x:Name="SongCurrentTime" Content="0:00" HorizontalAlignment="Left" Margin="10,0,0,38.59" FontWeight="Normal" Width="45.184" VerticalContentAlignment="Bottom" Opacity="0.8"/>
         </Grid>
         <MediaElement x:Name="Player" HorizontalAlignment="Left" Height="80" Margin="10,10,0,0" VerticalAlignment="Top" Width="80" ScrubbingEnabled="True" MediaEnded="Player_MediaEnded" MediaOpened="Player_MediaOpened" Volume="0.7" LoadedBehavior="Manual"/>
-        <Image x:Name="AlbumArt" Margin="10,10,183,10" Source="album_placeholder.png" MinWidth="80" MinHeight="80" VerticalAlignment="Top" HorizontalAlignment="Left"/>
+        <Image x:Name="AlbumArt" Margin="10,10,183,10" Source="../img/albumart_placeholder.png" MinWidth="80" MinHeight="80" VerticalAlignment="Top" HorizontalAlignment="Left"/>
         <Slider x:Name="VolumeSlider" Grid.Column="4" HorizontalAlignment="Center" Margin="118,41,55,41" VerticalAlignment="Center" Width="100" ValueChanged="VolumeSlider_ValueChanged" Maximum="1" Value="0.7" Opacity="0.8" LargeChange="0.1" SmallChange="0.01" TickFrequency="0.01"/>
         <Image x:Name="VolumeButton" Grid.Column="4" Height="18" Margin="95,41,160,41" Width="18" Source="volume-high.png" Opacity="0.795" UseLayoutRounding="True" ClipToBounds="True" SnapsToDevicePixels="True" HorizontalAlignment="Center"/>
         <Image x:Name="ShuffleButton" Grid.Column="4" HorizontalAlignment="Center" Height="64" Margin="10,18,200,18" VerticalAlignment="Center" Width="63" Source="../img/shuffle.png" RenderTransformOrigin="-0.808,-0.869" UseLayoutRounding="True" ClipToBounds="True" SnapsToDevicePixels="True" Opacity="0.9" MouseUp="ShuffleButton_MouseUp">
