--- a/pages/Settings.xaml
+++ b/pages/Settings.xaml
@@ -9,17 +9,22 @@
       Title="Settings">
 
     <Grid>
-        <!--<Border BorderThickness="10" BorderBrush="#FFAB0000"></Border>-->
-        <ToggleButton HorizontalAlignment="Left" Margin="359.6,74,0,0" VerticalAlignment="Top" Height="40" Width="40" Style="{DynamicResource MaterialDesignFlatPrimaryToggleButton}">
-            <StackPanel>
-                <Image Source="../img/close.png.png" Width="30" HorizontalAlignment="Right"/>
-            </StackPanel>
-        </ToggleButton>
-        <ToggleButton x:Name="toggleButton" HorizontalAlignment="Right" Margin="0,119,10,0" VerticalAlignment="Top" Height="40" Width="40" RenderTransformOrigin="0.07,0.49" Checked="coolChecked" Unchecked="coolUnchecked"/>
-        <TextBox x:Name="BpmInput" HorizontalAlignment="Right" KeyUp="KeyUp" Background="White" Margin="0,164,10,0" VerticalAlignment="Top" Height="40" Width="80"/>
-        <Label Content="Cool switch" Margin="10,74,0,0" VerticalAlignment="Top" Width="110.88" Height="40" HorizontalAlignment="Left" VerticalContentAlignment="Center" HorizontalContentAlignment="Center"/>
-        <Label Content="Cool switch" Margin="10,119,0,0" VerticalAlignment="Top" Width="110.88" Height="40" HorizontalAlignment="Left" VerticalContentAlignment="Center" HorizontalContentAlignment="Center"/>
-        <Label Content="BPM" x:Name="setBpm" Margin="10,164,0,0" VerticalAlignment="Top" Width="110.88" Height="40" HorizontalAlignment="Left" VerticalContentAlignment="Center" HorizontalContentAlignment="Center"/>
-        <Label x:Name="coolLabel" Content="Label" HorizontalAlignment="Left" Margin="71.641,242.266,0,0" VerticalAlignment="Top"/>
+        <Grid Margin="10">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition/>
+                <ColumnDefinition/>
+            </Grid.ColumnDefinitions>
+            <!--<Border BorderThickness="10" BorderBrush="#FFAB0000"></Border>-->
+            <ToggleButton HorizontalAlignment="Left" Margin="90,60,0,0" VerticalAlignment="Top" Height="40" Width="40" Style="{DynamicResource MaterialDesignFlatPrimaryToggleButton}" Grid.Column="1">
+                <StackPanel>
+                    <Image Source="../img/close.png.png" Width="30" HorizontalAlignment="Right"/>
+                </StackPanel>
+            </ToggleButton>
+            <ToggleButton x:Name="toggleButton" HorizontalAlignment="Right" Margin="0,10,10,0" VerticalAlignment="Top" Height="40" Width="40" RenderTransformOrigin="0.07,0.49" Checked="coolChecked" Unchecked="coolUnchecked" Grid.Column="1"/>
+            <TextBox x:Name="BpmInput" HorizontalAlignment="Right" KeyUp="KeyUp" Background="{x:Null}" Margin="0,100,10,0" VerticalAlignment="Top" Height="40" Width="80" Cursor="IBeam" FontFamily="Roboto Light" FontSize="24" Foreground="White" PreviewTextInput="NumberValidationTextBox" Grid.Column="1"/>
+            <Label Content="Auto" Margin="10,10,0,0" VerticalAlignment="Top" Width="110.88" Height="40" HorizontalAlignment="Left" VerticalContentAlignment="Center" HorizontalContentAlignment="Center"/>
+            <Label Content="Cool switch" Margin="10,55,0,0" VerticalAlignment="Top" Width="110.88" Height="40" HorizontalAlignment="Left" VerticalContentAlignment="Center" HorizontalContentAlignment="Center"/>
+            <Label Content="BPM" x:Name="setBpm" Margin="10,100,0,0" VerticalAlignment="Top" Width="110.88" Height="40" HorizontalAlignment="Left" VerticalContentAlignment="Center" HorizontalContentAlignment="Center"/>
+        </Grid>
     </Grid>
 </Page>
