--- a/pages/Settings.xaml
+++ b/pages/Settings.xaml
@@ -4,9 +4,8 @@
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
       xmlns:local="clr-namespace:WpfApp2"
-      mc:Ignorable="d" 
-      d:DesignHeight="300" d:DesignWidth="300"
-      Title="Settings">
+      mc:Ignorable="d"
+      Title="Settings" Height="449.194" Width="704.032" Foreground="White" Background="#FF303030">
 
     <Grid>
         <Grid Margin="10">
@@ -15,16 +14,29 @@
                 <ColumnDefinition/>
             </Grid.ColumnDefinitions>
             <!--<Border BorderThickness="10" BorderBrush="#FFAB0000"></Border>-->
-            <ToggleButton HorizontalAlignment="Left" Margin="90,60,0,0" VerticalAlignment="Top" Height="40" Width="40" Style="{DynamicResource MaterialDesignFlatPrimaryToggleButton}" Grid.Column="1">
+            <ToggleButton HorizontalAlignment="Left" Margin="73.667,219,0,0" VerticalAlignment="Top" Height="40" Width="40" Style="{DynamicResource MaterialDesignFlatPrimaryToggleButton}" Grid.Column="1">
                 <StackPanel>
                     <Image Source="../img/close.png.png" Width="30" HorizontalAlignment="Right"/>
                 </StackPanel>
             </ToggleButton>
-            <ToggleButton x:Name="toggleButton" HorizontalAlignment="Right" Margin="0,10,10,0" VerticalAlignment="Top" Height="40" Width="40" RenderTransformOrigin="0.07,0.49" Checked="coolChecked" Unchecked="coolUnchecked" Grid.Column="1"/>
-            <TextBox x:Name="BpmInput" HorizontalAlignment="Right" KeyUp="KeyUp" Background="{x:Null}" Margin="0,100,10,0" VerticalAlignment="Top" Height="40" Width="80" Cursor="IBeam" FontFamily="Roboto Light" FontSize="24" Foreground="White" PreviewTextInput="NumberValidationTextBox" Grid.Column="1"/>
+            <ToggleButton x:Name="toggleButton" Margin="5,10,10,0" VerticalAlignment="Top" Height="40" RenderTransformOrigin="0.07,0.49" Checked="coolChecked" Unchecked="coolUnchecked" Grid.Column="1"/>
+            <TextBox x:Name="IntervalInput" KeyUp="KeyUp" Background="{x:Null}" Margin="151.008,71,151.008,0" VerticalAlignment="Top" Height="35" Width="40" Cursor="IBeam" FontFamily="Roboto Light" FontSize="24" Foreground="White" PreviewTextInput="NumberValidationTextBox" Grid.Column="1" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" Text="120"/>
             <Label Content="Auto" Margin="10,10,0,0" VerticalAlignment="Top" Width="110.88" Height="40" HorizontalAlignment="Left" VerticalContentAlignment="Center" HorizontalContentAlignment="Center"/>
-            <Label Content="Cool switch" Margin="10,55,0,0" VerticalAlignment="Top" Width="110.88" Height="40" HorizontalAlignment="Left" VerticalContentAlignment="Center" HorizontalContentAlignment="Center"/>
-            <Label Content="BPM" x:Name="setBpm" Margin="10,100,0,0" VerticalAlignment="Top" Width="110.88" Height="40" HorizontalAlignment="Left" VerticalContentAlignment="Center" HorizontalContentAlignment="Center"/>
+            <Label Content="BPM" x:Name="setBpm" Margin="10,117,0,0" VerticalAlignment="Top" Width="110.88" Height="40" HorizontalAlignment="Left" VerticalContentAlignment="Center" HorizontalContentAlignment="Center"/>
+            <Label Content="Cool switch" Margin="10,219,0,0" VerticalAlignment="Top" Width="110.88" Height="40" HorizontalAlignment="Left" VerticalContentAlignment="Center" HorizontalContentAlignment="Center"/>
+            <Label Content="Interval" HorizontalAlignment="Left" Margin="10,61,0,0" VerticalAlignment="Top" Width="110.88" Height="45" HorizontalContentAlignment="Center" VerticalContentAlignment="Center"/>
+            <Button x:Name="IntervalAdd" Content="+" Grid.Column="1" Margin="111.008,71,196.008,0" VerticalAlignment="Top" Width="35" FontSize="24" FontFamily="Roboto Thin" Height="35" VerticalContentAlignment="Top" HorizontalContentAlignment="Center" Style="{DynamicResource MaterialDesignToolForegroundButton}" Foreground="White" Click="IntervalAdd_Click" />
+            <Button x:Name="IntervalSub" Content="¯" Grid.Column="1" Margin="196.008,75,111.008,0" VerticalAlignment="Top" Width="35" FontSize="48" FontFamily="Roboto Thin" Height="31" VerticalContentAlignment="Top" HorizontalContentAlignment="Center" Style="{DynamicResource MaterialDesignToolForegroundButton}" Foreground="White" Click="IntervalSub_Click" />
+            <Button Content="¯" Grid.Column="1" Margin="196.008,126,111.008,0" VerticalAlignment="Top" Width="35" FontSize="48" FontFamily="Roboto Thin" Height="31" VerticalContentAlignment="Top" HorizontalContentAlignment="Center" Style="{DynamicResource MaterialDesignToolForegroundButton}" Foreground="White" />
+            <Button Content="+" Grid.Column="1" Margin="111.008,122,196.008,0" VerticalAlignment="Top" Width="35" FontSize="24" FontFamily="Roboto Thin" Height="35" VerticalContentAlignment="Top" HorizontalContentAlignment="Center" Style="{DynamicResource MaterialDesignToolForegroundButton}" Foreground="White" />
+            <Label Content="BPM" x:Name="setBpm_Copy" Margin="10,168,0,0" VerticalAlignment="Top" Width="110.88" Height="40" HorizontalAlignment="Left" VerticalContentAlignment="Center" HorizontalContentAlignment="Center"/>
+            <TextBox x:Name="BpmInput_Copy" KeyUp="KeyUp" Background="{x:Null}" Margin="151.008,117,151.008,0" VerticalAlignment="Top" Height="40" Width="40" Cursor="IBeam" FontFamily="Roboto Light" FontSize="24" Foreground="White" PreviewTextInput="NumberValidationTextBox" Grid.Column="1" HorizontalContentAlignment="Center" Text="121"/>
+            <TextBox x:Name="BpmInput" KeyUp="KeyUp" Background="{x:Null}" Margin="151.008,168,151.008,0" VerticalAlignment="Top" Height="40" Width="40" Cursor="IBeam" FontFamily="Roboto Light" FontSize="24" Foreground="White" PreviewTextInput="NumberValidationTextBox" Grid.Column="1" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" Text="240"/>
+            <Path Data="M5,140.32258 L694.032,141.93548" Height="1" Margin="10,55,-10,0" Stretch="Fill" Stroke="#FF191919" VerticalAlignment="Top" Width="684.032" Grid.ColumnSpan="2"/>
+            <Path Data="M5,140.32258 L694.032,141.93548" Height="1" Margin="10,111,-10,0" Stretch="Fill" Stroke="#FF191919" VerticalAlignment="Top" Width="684.032" Grid.ColumnSpan="2"/>
+            <Path Data="M5,140.32258 L694.032,141.93548" Height="1" Margin="10,162,-10,0" Stretch="Fill" Stroke="#FF191919" VerticalAlignment="Top" Width="684.032" Grid.ColumnSpan="2"/>
+            <Path Data="M5,140.32258 L694.032,141.93548" Height="1" Margin="10,213,-10,0" Stretch="Fill" Stroke="#FF191919" VerticalAlignment="Top" Width="684.032" Grid.ColumnSpan="2"/>
+
         </Grid>
     </Grid>
 </Page>
